--- a/src/app/servers/server/server.component.html
+++ b/src/app/servers/server/server.component.html
@@ -1,4 +1,4 @@
 <h5>{{ server.name }}</h5>
 <p>Server status is {{ server.status }}</p>
 <hr>
-<button class="btn btn-primary" (click)="onEdit()">Edit user</button>
+<button class="btn btn-primary" (click)="onEdit()">Edit Server</button>
